--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,8 +90,6 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-//    debugImplementation 'de.robv.android.xposed:api:82'
-    compileOnly 'de.robv.android.xposed:api:82'
-    compileOnly 'de.robv.android.xposed:api:82:sources'
+    implementation files('libs/api-82.jar')
     implementation 'org.luckypray:dexkit:2.0.6'
 }
