--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,6 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation files('libs/api-82.jar')
+    implementation 'de.robv.android.xposed:api:82'
     implementation 'org.luckypray:dexkit:2.0.6'
 }
