--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ dependencyResolutionManagement {
         mavenLocal()
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "GboardHook"
