--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.17.0'
     implementation 'de.robv.android.xposed:api:82'
     implementation 'org.luckypray:dexkit:2.3.1'
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
