--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         minSdk 23
         targetSdk 36
         versionCode 9
-        versionName "1.2.0"
+        versionName "1.2.1-localbuild"
     }
     lintOptions {
         disable 'ExpiredTargetSdkVersion'
