--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -21,6 +21,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Gather variables
+        id: vars
+        run: |
+          GIT_SHA7=$(git rev-parse --short HEAD)
+          echo "GIT_SHA7=$GIT_SHA7" >> "$GITHUB_OUTPUT"
+          DATE=$(date -u +'%Y.%m.%d')
+          echo "DATE=$DATE" >> "$GITHUB_OUTPUT"
+
       - name: Replace "localbuild" in version with commit SHA7
         id: name_replace
         run: |
@@ -92,7 +100,7 @@ jobs:
             const releaseName = `Nightly (${new Date().toISOString().slice(0, 10)})`;
             let release = await findRelease();
 
-            const apkAssetName = "GboardHook-nightly-${{ steps.name_replace.outputs.GIT_SHA7 }}.apk";
+            const apkAssetName = "GboardHook-nightly-${{ steps.vars.outputs.DATE }}-${{ steps.vars.outputs.GIT_SHA7 }}.apk";
             const apkUrl = `https://github.com/${owner}/${repo}/releases/download/${tag}/${apkAssetName}`;
             const releaseBody = `Download the latest APK: [${apkAssetName}](${apkUrl})`;
 
@@ -128,7 +136,7 @@ jobs:
           upload_url: ${{ steps.release.outputs.upload_url }}
           release_id: ${{ steps.release.outputs.release_id }}
           asset_path: ${{ steps.locate_apk.outputs.apk_path }}
-          asset_name: "GboardHook-nightly-${{ steps.name_replace.outputs.GIT_SHA7 }}.apk"
+          asset_name: "GboardHook-nightly-${{ steps.vars.outputs.DATE }}-${{ steps.vars.outputs.GIT_SHA7 }}.apk"
           asset_content_type: application/vnd.android.package-archive
           max_releases: 5
           ignore_hash: false
