--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation files('../libs/api-82.jar')
     implementation 'org.luckypray:dexkit:2.0.7'
 }
