--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -91,25 +91,20 @@ jobs:
     # to build your code.
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
+    - name: Decode keystore
+      run: |
+        echo "${{ secrets.RELEASE_KEYSTORE }}" | base64 -d > app/AndroidKeystore/release-key.jks
+
     - name: Run manual build steps
       if: matrix.build-mode == 'manual'
-      shell: bash
+      env:
+        KEYSTORE_FILE: app/AndroidKeystore/release-key.jks
+        KEYSTORE_PASSWORD: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
+        KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
+        KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
       run: |
-          mkdir -p app/AndroidKeystore
-          keytool -genkeypair -noprompt \
-            -dname "CN=CI, OU=CI, O=CI, L=None, S=None, C=US" \
-            -alias debug -keyalg RSA -keysize 2048 -validity 36500 \
-            -storetype PKCS12 \
-            -keystore app/AndroidKeystore/debug.keystore \
-            -storepass android -keypass android
-          cat > app/AndroidKeystore/keystore.properties <<'EOF'
-          storeFile=AndroidKeystore/debug.keystore
-          storePassword=android
-          keyAlias=debug
-          keyPassword=android
-          EOF
-          chmod +x gradlew
-          ./gradlew --no-daemon assembleRelease
+        ./gradlew assembleRelease
+
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
