--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -42,6 +42,9 @@ jobs:
           distribution: zulu
           java-version: "25"
 
+      - name: Ensure keystore directory exists
+        run: mkdir -p app/AndroidKeystore
+
       - name: Decode keystore
         run: |
           echo "${{ secrets.RELEASE_KEYSTORE }}" | base64 -d > app/AndroidKeystore/release-key.jks
