--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,15 +27,10 @@ android {
     }
     signingConfigs {
         release {
-            if (keystorePropertiesFile.exists()) {
-                storeFile file(keystoreProperties['storeFile'])
-                storePassword keystoreProperties['storePassword']
-                keyAlias keystoreProperties['keyAlias']
-                keyPassword keystoreProperties['keyPassword']
-            } else {
-                // If the file doesn't exist, provide a default message or throw an exception
-                println "Warning: keystore.properties not found, using debug signing."
-            }
+            storeFile file(System.getenv("KEYSTORE_FILE") ?: "app/AndroidKeystore/release-key.jks")
+            storePassword System.getenv("KEYSTORE_PASSWORD") ?: ""
+            keyAlias System.getenv("KEY_ALIAS") ?: ""
+            keyPassword System.getenv("KEY_PASSWORD") ?: ""
         }
     }
     buildTypes {
