Use --no-daemon flag for gradlew assembleRelease in CodeQL and nightly workflows

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -56,7 +56,7 @@ jobs:
           KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
         run: |
-          ./gradlew assembleRelease
+          ./gradlew --no-daemon assembleRelease
 
       - name: Locate APK
         id: locate_apk
