--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         applicationId "dev.namelessnanashi.gboardhook"
         minSdk 23
         targetSdk 36
-        versionCode 9
+        versionCode (System.currentTimeMillis() / 1000 as int)
         versionName "1.2.1-localbuild"
     }
     lintOptions {
