--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
 //        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.13.1'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:2.2.21'
+        classpath 'com.android.tools.build:gradle:9.0.0-beta02'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:2.3.0-RC'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
