Refactor Gradle build files for consistency and clarity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,13 @@ android {
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.release
-            minifyEnabled false
+            signingConfig = signingConfigs.release
+            minifyEnabled = false
         }
         release {
-            signingConfig signingConfigs.release
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig = signingConfigs.release
+            minifyEnabled = true
+            proguardFiles = [getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro']
         }
     }
 
@@ -48,7 +48,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
     }
-    namespace 'dev.namelessnanashi.gboardhook'
+    namespace = 'dev.namelessnanashi.gboardhook'
 
     buildFeatures {
         buildConfig = true
