Change reaction from 'heavy_check_mark' to 'rocket'

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -51,7 +51,7 @@ jobs:
                 owner: repo.owner,
                 repo: repo.repo,
                 comment_id: comment.id,
-                content: 'heavy_check_mark'
+                content: 'rocket'
               });
             } else {
               core.setOutput('is_owner', 'false');
