Update Dependabot configuration and GitHub Actions workflows for daily updates and improved artifact handling

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,10 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
     open-pull-requests-limit: 5
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
     open-pull-requests-limit: 5
