--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -1,88 +1,53 @@
 name: PR Comment
 
 on:
-  workflow_run:
-    workflows: ["PR Build"]
-    types:
-      - completed
+  workflow_call:
+    inputs:
+      pr_number:
+        required: true
+        type: number
+      pr_sha:
+        required: true
+        type: string
+      apk_name:
+        required: true
+        type: string
+      artifact_name:
+        required: true
+        type: string
+      run_id:
+        required: true
+        type: number
+      retention_days:
+        required: true
+        type: number
 
 permissions:
-  contents: read
-  issues: write
   pull-requests: write
+  issues: write
 
 jobs:
   comment:
     runs-on: ubuntu-latest
-    if: >
-      github.event.workflow_run.event == 'pull_request' &&
-      github.event.workflow_run.conclusion == 'success'
     steps:
-      - name: Download artifact
-        uses: actions/github-script@v8
-        with:
-          script: |
-            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: ${{ github.event.workflow_run.id }},
-            });
-            const matchArtifact = artifacts.data.artifacts.filter((artifact) => {
-              return artifact.name.startsWith("pr-build-");
-            })[0];
-            const download = await github.rest.actions.downloadArtifact({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              artifact_id: matchArtifact.id,
-              archive_format: 'zip',
-            });
-            const fs = require('fs');
-            fs.writeFileSync('${{ github.workspace }}/pr-build.zip', Buffer.from(download.data));
-
-      - name: Extract artifact
-        run: |
-          mkdir -p pr-build
-          unzip -d pr-build/ pr-build.zip
-
-      - name: Read PR info
-        id: pr_info
-        run: |
-          PR_NUMBER=$(cat pr-build/pr/NR)
-          PR_SHA=$(cat pr-build/pr/SHA)
-          APK_FILE=$(ls pr-build/*.apk | head -n 1)
-          APK_NAME=$(basename "$APK_FILE")
-          echo "pr_number=$PR_NUMBER" >> "$GITHUB_OUTPUT"
-          echo "pr_sha=$PR_SHA" >> "$GITHUB_OUTPUT"
-          echo "apk_name=$APK_NAME" >> "$GITHUB_OUTPUT"
-
       - name: Comment on PR
         uses: actions/github-script@v8
-        env:
-          PR_NUMBER: ${{ steps.pr_info.outputs.pr_number }}
-          PR_SHA: ${{ steps.pr_info.outputs.pr_sha }}
-          APK_NAME: ${{ steps.pr_info.outputs.apk_name }}
         with:
           script: |
-            const prNumber = Number(process.env.PR_NUMBER);
-            const prSha = process.env.PR_SHA;
-            const apkName = process.env.APK_NAME;
-            const runId = ${{ github.event.workflow_run.id }};
+            const prNumber = ${{ inputs.pr_number }};
+            const prSha = '${{ inputs.pr_sha }}';
+            const apkName = '${{ inputs.apk_name }}';
+            const runId = ${{ inputs.run_id }};
+            const artifactName = '${{ inputs.artifact_name }}';
+            const retentionDays = ${{ inputs.retention_days }};
             const { repo, owner } = context.repo;
-            
-            // Verify PR number is numeric
-            if (!Number.isInteger(prNumber) || prNumber <= 0) {
-              core.setFailed('Invalid PR number');
-              return;
-            }
-            
-            const artifactName = `pr-build-${prNumber}`;
             
             const commentBody = [
               '## [BUILD] Testing/Debug Build Ready',
               '',
-              'A debug APK has been built for this PR and is available for 14 days.',
+              `A debug APK has been built for this PR and is available for ${retentionDays} days.`,
               '',
-              `**Download**: [${artifactName}](https://nightly.link/${owner}/${repo}/actions/runs/${runId}/${artifactName})`,
+              `**Download**: [${apkName}](https://nightly.link/${owner}/${repo}/actions/runs/${runId}/${artifactName})`,
               '',
               '**Build Info**:',
               `- Commit: \`${prSha.substring(0, 7)}\``,
@@ -100,7 +65,7 @@ jobs:
               '- ✖ UNVERIFIED CODE: Contains unreviewed code changes that may be malicious or buggy',
               '- ✖ NO WARRANTY: This build comes with ABSOLUTELY NO WARRANTY of any kind',
               '- ✖ POTENTIAL RISKS: May contain malware, backdoors, data theft code, or cause device instability',
-              '- ⏲ TEMPORARY KEY: Signed with a debug key that expires in 14 days',
+              `- ⏲ TEMPORARY KEY: Signed with a debug key that expires in ${retentionDays} days`,
               '',
               '⚠ WARNING: DO NOT INSTALL UNLESS:',
               '- ✔ You are an experienced developer who understands the risks',
